<resources>
    <string name="app_name">Speed Math</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="home_pic">home_pic</string>
    <string name="new_game">New Game</string>
    <string name="about">About</string>
    <string name="how_to_play">How to Play</string>
    <string name="q_time">Quickest Time: 65s</string>
    <string name="title_activity_display_about">DisplayAboutActivity</string>
    <string name="title_activity_new_game">NewGameActivity</string>
    <string name="timer_val">00:00:00</string>
    <string name="penalty_time">Penalty Time: 0s</string>
    <string name="title_activity_game_result">GameResultActivity</string>
    <string name="title_activity_how_to_play">HowToPlayActivity</string>
    <string name="title_activity_high_score">HighScoreActivity</string>
    <string name="title_activity_players_on_server">PlayersOnServer</string>
</resources>
